feat: Floor plan HTML structure

--- a/index.html
+++ b/index.html
@@ -12,6 +12,33 @@
         <div id="employeeContainer"></div>
         <button id="addEmployeeBtn">Add New Worker</button>
     </aside>
+
+    <main>
+        <div id="ConferenceRooM">
+
+            <button>+</button>
+        </div>
+        <div id="reception">
+
+            <button>+</button>
+        </div>
+        <div id="serverRoom">
+
+            <button>+</button>
+        </div>
+        <div id="securityRoom">
+
+            <button>+</button>
+        </div>
+        <div id="staffRoom">
+
+            <button>+</button>
+        </div>
+        <div id="archivesRoom">
+            
+            <button>+</button>
+        </div>
+    </main>
     <script src="screpts/scripts.js"></script>
 </body>
 </html>
