feat: Main layout styling

--- a/index.html
+++ b/index.html
@@ -1,44 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WorkSphere---Virtual-Workspace</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
-    <aside>
-        <h2>Unassigned Staff</h2>
-        <div id="employeeContainer"></div>
-        <button id="addEmployeeBtn">Add New Worker</button>
-    </aside>
+    <div class="container">
 
-    <main>
-        <div id="ConferenceRooM">
+        <aside>
+            <h2>Unassigned Staff</h2>
+            <button id="addEmployeeBtn">Add New Worker</button>
+            <div id="employeeContainer"></div>
+        </aside>
 
-            <button>+</button>
-        </div>
-        <div id="reception">
+        <main>
+            <div id="conference">
 
-            <button>+</button>
-        </div>
-        <div id="serverRoom">
+                <button>+</button>
+            </div>
+            <div id="reception">
 
-            <button>+</button>
-        </div>
-        <div id="securityRoom">
+                <button>+</button>
+            </div>
+            <div id="server">
 
-            <button>+</button>
-        </div>
-        <div id="staffRoom">
+                <button>+</button>
+            </div>
+            <div id="security">
 
-            <button>+</button>
-        </div>
-        <div id="archivesRoom">
-            
-            <button>+</button>
-        </div>
-    </main>
+                <button>+</button>
+            </div>
+            <div id="staff">
+
+                <button>+</button>
+            </div>
+            <div id="archives">
+
+                <button>+</button>
+            </div>
+        </main>
+    </div>
     <!-- add employee modal -->
     <div id="addModal">
         <div class="modalContainer">
