feat: Floor zones styling with background integration

--- a/index.html
+++ b/index.html
@@ -18,29 +18,41 @@
         </aside>
 
         <main>
-            <div id="conference">
+            <div id="conference" class="zone">
+                <div class="employeeZone">
 
-                <button>+</button>
+                </div>
+                <button class="add-zone-btn">+</button>
             </div>
-            <div id="reception">
+            <div id="reception" class="zone">
+                <div class="employeeZone">
 
-                <button>+</button>
+                </div>
+                <button class="add-zone-btn">+</button>
             </div>
-            <div id="server">
+            <div id="server" class="zone">
+                <div class="employeeZone">
 
-                <button>+</button>
+                </div>
+                <button class="add-zone-btn">+</button>
             </div>
-            <div id="security">
+            <div id="security" class="zone">
+                <div class="employeeZone">
 
-                <button>+</button>
+                </div>
+                <button class="add-zone-btn">+</button>
             </div>
-            <div id="staff">
+            <div id="staff" class="zone">
+                <div class="employeeZone">
 
-                <button>+</button>
+                </div>
+                <button class="add-zone-btn">+</button>
             </div>
-            <div id="archives">
-
-                <button>+</button>
+            <div id="archives" class="zone">
+                <div class="employeeZone">
+                    
+                </div>
+                <button class="add-zone-btn">+</button>
             </div>
         </main>
     </div>
