feat: Add modal functionality

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                     </div>
 
                     <div class="employeeDisition">
-                        <button type="button" class="cancelEmployeeBtn">Cancel</button>
+                        <button type="button" id="canselFormBtn" class="cancelEmployeeBtn">Cancel</button>
                         <button type="submit" class="addEmployeeBtn">Add Employee</button>
                     </div>
                 </form>
