Dynamic experience fields

--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
 
                         <div id="experiencesContainer">
                             <!-- Dynamic experience blocks will be added here with js-->
-                            <!-- <div class="experience-block" data-exp-id="1">
+                            <div class="experience-block" data-exp-id="1">
                                 <div class="experience-header">
                                     <span>Experience #1</span>
-                                    <button type="button" class="remove-experience-btn" disabled>Remove</button>
+                                    <button type="button" class="remove-experience-btn" data-remove-id="1" disabled style="background-color: gray;">Remove</button>
                                 </div>
                                 <div class="form-row">
                                     <div class="form-group">
@@ -152,7 +152,7 @@
                                         <input type="date" class="exp-end">
                                     </div>
                                 </div>
-                            </div> -->
+                            </div>
                         </div>
                     </div>
 
