feat: Photo preview feature

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         <label for="employeePhoto">Photo URL : </label>
                         <input type="url" id="employeePhoto">
                         <div class="photo-preview">
-                            <img id="photoPreview" src="https://avatar.iran.liara.run/public/30" alt="Preview"
+                            <img id="photoPreview" src="./assets/images/18.png" alt="Preview"
                                 style="width:80px;">
                         </div>
                     </div>
