--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <div class="error-message"></div>
                     <div class="form-group">
                         <label for="employeeName">Full Name *: </label>
-                        <input type="text" id="employeeName" required>
+                        <input type="text" id="employeeName">
                     </div>
 
                     <div class="form-group">
@@ -111,12 +111,12 @@
 
                     <div class="form-group">
                         <label for="employeeEmail">Email *: </label>
-                        <input type="email" id="employeeEmail" required>
+                        <input type="email" id="employeeEmail">
                     </div>
 
                     <div class="form-group">
                         <label for="employeePhone">Phone *: </label>
-                        <input type="tel" id="employeePhone" required>
+                        <input type="tel" id="employeePhone">
                     </div>
 
                     <div class="form-section">
