feat: Remove employee from zone

--- a/index.html
+++ b/index.html
@@ -30,14 +30,17 @@
         <main>
             <div id="conference" class="zone">
                 <div class="employeeZone">
-                    <!-- <div class="employee-card-onzone">
+
+                    <div class="employee-card-onzone">
                         <img src="https://avatar.iran.liara.run/public/30" alt="Preview" style="width:40px;">
                         <div>
                             <h4>abdladim</h4>
                             <p>IT staff</p>
                         </div>
-                    </div> -->
-                </div>
+                        <div style="font-size: 25px;" class="btnToUnassignedEmp" data-id="1"Z>&times;</div>
+                    </div>
+                
+                </div>    
                 <button class="add-zone-btn">+</button>
             </div>
             <div id="reception" class="zone">
