feat: Zone restrictions logic

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             <h4>abdladim</h4>
                             <p>IT staff</p>
                         </div>
-                        <div style="font-size: 25px;" class="btnToUnassignedEmp" data-id="1"Z>&times;</div>
+                        <div style="font-size: 25px;" class="btnToUnassignedEmp" data-id="1">&times;</div>
                     </div>
                 
                 </div>    
