feat: Zone selection modal

--- a/index.html
+++ b/index.html
@@ -31,47 +31,47 @@
             <div id="conference" class="zone">
                 <div class="employeeZone">
 
-                    <div class="employee-card-onzone">
+                    <!-- <div class="employee-card-onzone">
                         <img src="https://avatar.iran.liara.run/public/30" alt="Preview" style="width:40px;">
                         <div>
                             <h4>abdladim</h4>
                             <p>IT staff</p>
                         </div>
                         <div style="font-size: 25px;" class="btnToUnassignedEmp" data-id="1">&times;</div>
-                    </div>
+                    </div> -->
                 
                 </div>    
-                <button class="add-zone-btn">+</button>
+                <button class="add-zone-btn" data-zone="conference">+</button>
             </div>
             <div id="reception" class="zone">
                 <div class="employeeZone">
 
                 </div>
-                <button class="add-zone-btn">+</button>
+                <button class="add-zone-btn" data-zone="reception">+</button>
             </div>
             <div id="server" class="zone">
                 <div class="employeeZone">
 
                 </div>
-                <button class="add-zone-btn">+</button>
+                <button class="add-zone-btn" data-zone="server">+</button>
             </div>
             <div id="security" class="zone">
                 <div class="employeeZone">
 
                 </div>
-                <button class="add-zone-btn">+</button>
+                <button class="add-zone-btn" data-zone="security">+</button>
             </div>
             <div id="staff" class="zone">
                 <div class="employeeZone">
 
                 </div>
-                <button class="add-zone-btn">+</button>
+                <button class="add-zone-btn" data-zone="staff">+</button>
             </div>
             <div id="archives" class="zone">
                 <div class="employeeZone">
 
                 </div>
-                <button class="add-zone-btn">+</button>
+                <button class="add-zone-btn" data-zone="archives">+</button>
             </div>
         </main>
     </div>
