feat: Assign employee to zone

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         </aside>
 
         <main>
-            <div id="conference" class="zone">
-                <div class="employeeZone">
+            <div class="zone conference">
+                <div class="employeeZone" id="conference">
 
                     <!-- <div class="employee-card-onzone">
                         <img src="https://avatar.iran.liara.run/public/30" alt="Preview" style="width:40px;">
@@ -43,32 +43,32 @@
                 </div>    
                 <button class="add-zone-btn" data-zone="conference">+</button>
             </div>
-            <div id="reception" class="zone">
-                <div class="employeeZone">
+            <div class="zone reception">
+                <div class="employeeZone" id="reception">
 
                 </div>
                 <button class="add-zone-btn" data-zone="reception">+</button>
             </div>
-            <div id="server" class="zone">
-                <div class="employeeZone">
+            <div class="zone server">
+                <div class="employeeZone" id="server" >
 
                 </div>
                 <button class="add-zone-btn" data-zone="server">+</button>
             </div>
-            <div id="security" class="zone">
-                <div class="employeeZone">
+            <div class="zone security">
+                <div class="employeeZone" id="security">
 
                 </div>
                 <button class="add-zone-btn" data-zone="security">+</button>
             </div>
-            <div id="staff" class="zone">
-                <div class="employeeZone">
+            <div class="zone staff">
+                <div class="employeeZone" id="staff">
 
                 </div>
                 <button class="add-zone-btn" data-zone="staff">+</button>
             </div>
-            <div id="archives" class="zone">
-                <div class="employeeZone">
+            <div class="zone archives">
+                <div class="employeeZone"  id="archives">
 
                 </div>
                 <button class="add-zone-btn" data-zone="archives">+</button>
