feat: Employee profile moda

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div id="employeeContainer">
 
                 <!-- <div class="employee-card">
-                    <img src="https://avatar.iran.liara.run/public/30" alt="Preview" style="width:80px;">
+                    <img data-profile="1" src="https://avatar.iran.liara.run/public/30" alt="Preview" style="width:80px;">
                     <div>
                         <h4>abdladim</h4>
                         <p>IT staff</p>
@@ -29,10 +29,10 @@
 
         <main>
             <div class="zone conference">
+                <div class="zone-title">conference</div>
                 <div class="employeeZone" id="conference">
-
                     <!-- <div class="employee-card-onzone">
-                        <img src="https://avatar.iran.liara.run/public/30" alt="Preview" style="width:40px;">
+                        <img data-profile="1" src="https://avatar.iran.liara.run/public/30" alt="Preview" style="width:40px;">
                         <div>
                             <h4>abdladim</h4>
                             <p>IT staff</p>
@@ -44,30 +44,35 @@
                 <button class="add-zone-btn" data-zone="conference">+</button>
             </div>
             <div class="zone reception">
+                <div class="zone-title">reception</div>
                 <div class="employeeZone" id="reception">
 
                 </div>
                 <button class="add-zone-btn" data-zone="reception">+</button>
             </div>
             <div class="zone server">
+                <div class="zone-title">server</div>
                 <div class="employeeZone" id="server" >
 
                 </div>
                 <button class="add-zone-btn" data-zone="server">+</button>
             </div>
             <div class="zone security">
+                <div class="zone-title">security</div>
                 <div class="employeeZone" id="security">
 
                 </div>
                 <button class="add-zone-btn" data-zone="security">+</button>
             </div>
             <div class="zone staff">
+                <div class="zone-title">staff</div>
                 <div class="employeeZone" id="staff">
 
                 </div>
                 <button class="add-zone-btn" data-zone="staff">+</button>
             </div>
             <div class="zone archives">
+                <div class="zone-title">archives</div>
                 <div class="employeeZone"  id="archives">
 
                 </div>
@@ -179,7 +184,7 @@
                     <!-- Dynamic experience blocks will be added here with js-->
                     <!-- <div class="selection-list">
                         <div>
-                            <img src="https://avatar.iran.liara.run/public/30" alt="Preview" style="width:80px;">
+                            <img data-profile="1" src="https://avatar.iran.liara.run/public/30" alt="Preview" style="width:80px;">
                         </div>
                         <div>
                             <span class="selectionName">abd ladim</span>
@@ -202,7 +207,7 @@
                     <!-- Dynamic experience blocks will be added here with js-->
                     <!-- <div class="selectionEmployee-block" data-emp-id="1">
                         <div>
-                            <img src="https://avatar.iran.liara.run/public/30" alt="Preview" style="width:80px;">
+                            <img src="https://avatar.iran.liara.run/public/30" alt="Preview" style="width:150px;">
                         </div>
                         <div>
                             <h3>Personal Information</h3>
