feat: Edit employee feature

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <div id="addModal" class="modal-overlay hidden">
         <div class="modalContainer">
             <div class="modalHeader">
-                <h2>ADD WORKER</h2>
+                <h2 id="actionOfWorker">ADD WORKER</h2>
                 <button class="closeBtn">&times;</button>
             </div>
             <div class="modalBody ">
@@ -166,7 +166,7 @@
 
                     <div class="employeeDisition">
                         <button type="button" id="canselFormBtn" class="cancelEmployeeBtn">Cancel</button>
-                        <button type="submit" class="addEmployeeBtn">Add Employee</button>
+                        <button type="submit" class="addEmployeeBtn" id="addEmployeeBtnSubmit">Add Employee</button>
                     </div>
                 </form>
             </div>
